--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,16 +79,15 @@ font-size: 26px;
 }
 
 ul li {
-line-height: 1.3em;
-font-size: 20px;
-margin-bottom: 20px;
+line-height: 1.5em;
+font-size: 18px;
+margin-bottom: 15px;
 // color: rgb(74, 135, 146);
 font-weight: bold;
 list-style-type: none;
 }
 
  ul li ul li {
-color:#666;
 list-style-type: none;
 font-size: 18px;font-weight: normal;
 line-height: 1.5em;
@@ -111,7 +110,8 @@ height: 131px
    font-size: 72px;
 color: #faec5c;
 }
-.hurry{padding:20px; text-align: center;}
+
+.hurry{margin-left: -17px;}
 footer {
 background: rgb(255, 255, 255);
 font-size: 16px;
