--- a/css/main.css
+++ b/css/main.css
@@ -3030,21 +3030,17 @@ ul li ul li { list-style-type: none; font-size: 18px; font-weight: normal; line-
 
 .top-heading p { font-family: 'Maven Pro', sans-serif; font-size: 72px; color: #faec5c; }
 
-.hurry { margin-left: -17px; }
+.hurry { margin-left: -17px; line-height: 1.3; }
 
 footer { background: white; font-size: 16px; padding-top: 45px; }
 
 .bottom { margin-top: 20px; background-color: #eee; }
 
-.media-heading { margin: 0 0 5px; color: #474444; }
+.muted { padding: 20px; }
 
-.media-heading h4 { font-size: 19.5px; }
+.contact-number { font-weight: bold; color: #c95000; }
 
-.muted { padding: 20px; font-weight: bold; }
-
-.copyright, .credits { text-align: center; }
-
-.credits { margin-left: 125px; }
+.credits { margin-left: 185px; }
 
 .btn-sample { color: #456886; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #FAEF5F; *background-color: #FAEF5F; background-image: -moz-linear-gradient(top, #fbcc3c, #faef5f); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbcc3c), to(#faef5f)); background-image: -webkit-linear-gradient(top, #fbcc3c, #faef5f); background-image: -o-linear-gradient(top, #fbcc3c, #faef5f); background-image: linear-gradient(to bottom, #fbcc3c, #faef5f); background-repeat: repeat-x; border-color: #FAEF5F; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FBCC3C', endColorstr='#FAEF5F', GradientType=0); filter: progid:DXImageTransform.Microsoft.gradient(enabled=false); font-weight: normal; font-size: 24px; }
 
