--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,11 +65,7 @@ padding: 10px;
 font-weight: 700;
 position: relative;text-align: center;overflow: hidden;}
 
-
-
-
 .navbar-inner {border: 0;background-color: transparent}
-
 
 h2 {
 color: #eb5d1f;
@@ -103,7 +99,7 @@ height: 131px
 
 .middle-box{background-color: white;
 line-height: 118px;
-height: 131px
+height: 131px;
 }
 
 .top-heading p{font-family: 'Maven Pro', sans-serif;
@@ -111,7 +107,8 @@ height: 131px
 color: #faec5c;
 }
 
-.hurry{margin-left: -17px;}
+.hurry{margin-left: -17px;line-height: 1.3;}
+
 footer {
 background: rgb(255, 255, 255);
 font-size: 16px;
@@ -119,19 +116,13 @@ padding-top: 45px;
 }
 .bottom { margin-top:20px; background-color: #eee;}
 
-.media-heading {
-margin: 0 0 5px;
-color: rgb(71, 68, 68);
-}
-.media-heading h4{font-size: 19.5px;
-}
+
 .muted{padding: 20px;
-font-weight: bold;
 }
 
-.copyright ,.credits{text-align: center;}
+.contact-number{font-weight:bold; color:rgb(201, 80, 0);}
+.credits{margin-left: 185px;}
 
-.credits{margin-left: 125px;}
 
 .btn-sample {
 	color: #456886;
