--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,7 +44,7 @@ letter-spacing: 2px;
 
 .presented-by{margin-top:40px; margin-bottom:40px;}
 
-.workshop-date{font-size: 32px; font-weight: 400; margin-bottom: 30px; color:#666;margin-top: 30px;}
+.workshop-date{font-size: 25px; font-weight: 400; margin-bottom: 30px; color:#666;margin-top: 30px;}
 
 .alert-info {
 background-color: #3674a8;
@@ -121,7 +121,7 @@ padding-top: 45px;
 .bottom { margin-top:20px; background-color: #eee;}
 
 
-.muted{padding: 20px;
+.media{padding: 15px;
 }
 
 .contact-number{font-weight:bold; color:rgb(201, 80, 0);}
